<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Меню !-->
    <string name="action_SCAdd">Добавить шоу…</string>
    <string name="action_FixtAdd">Добавить прибор…</string>
    <string name="action_ConfigAdd">Новая конфигурация</string>
    <string name="action_DmxStatus">DMX статус</string>

    <!-- Общий !-->
    <string name="ok">OK</string>
    <string name="app_name">DLControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="manual">Ручное управление</string>
    <string name="dimtxt">Dimmer</string>
    <string name="rtxt">Red</string>
    <string name="gtxt">Green</string>
    <string name="btxt">Blue</string>
    <string name="strobotxt">Strobo</string>
    <string name="pantxt">Pan</string>
    <string name="tilttxt">Tilt</string>
    <string name="showbtn">Загрузить шоу</string>
    <string name="addframe">Добавить\nсцену</string>
    <string name="delframe">Удалить\nсцену</string>
    <string name="nextframe">След. \nсцена</string>
    <string name="prevframe">Пред. \nсцена</string>
    <string name="frametime">Время \nсцены</string>
    <string name="fadetime">Время \nперехода</string>
    <string name="saveshow">Готово!</string>
    <string name="framenumber">\nСцена №</string>
    <string name="fixtname">Название прибора</string>
    <string name="addfunct">+</string>
    <string name="delfunct">-</string>
    <string name="entrance">Вход</string>
    <string name="error">Ошибка!</string>
    <string name="restart">Необходимо перезапустить программу!</string>
    <string name="err_config">Невозможно загрузить файлы конфигурации</string>
    <string name="unexpected_err">Произошла внутренняя ошибка!</string>
    <string name="exit">Выход</string>
    <string name="artneterr">Перезапустите Art-Net!</string>


    <!-- ShowCreating-->
    <string name="SCtable_num">№</string>
    <string name="SCtable_fadetime">Fade time</string>
    <string name="SCtable_frametime">Frame time</string>
    <string name="SCframe_max_err">Достигнуто максимальное количество сцен!</string>

    <!--  Выбор протокола !-->
    <string name="chprottitle">Выберите протокол</string>
    <string name="opendmx">Open DMX</string>
    <string name="artnet">Art-Net</string>
    <string name="defprot">Запомнить выбор</string>

    <!-- Демо-режим !-->
    <string name="demo_config">config.conf</string>
    <string name="configfile">1\nДемо-прибор\n0</string>
    <string name="demo_fixt">Демо-прибор</string>
    <string name="demo_show">Демо-шоу.shw</string>
    <string name="fixtfile">3\nred 1\ngreen 2\nblue 3</string>
    <string name="showfile">7\nred green
        blue\n2000\n1000\n127;\n2000\n1000\n0;127;\n2000\n1000\n0;0;127;\n500\n0\n0;\n500\n0\n127;127;127;\n500\n0\n0;\n500\n0\n127;127;127;
    </string>
    <string name="demo_mode">Демо-режим</string>
    <!-- Цвета !-->
    <color name="second">#0099FF</color>
    <!-- FFB440 -->
    <color name="main">#1d46FF</color>
    <!-- FF7800 -->
    <color name="third">#0087E0</color>
    <!-- FFC440 -->
    <color name="white">#FFFFFF</color>
    <color name="blue">#0000FF</color>
    <color name="exp">#6a0000ff</color>
    <color name="alpha">#000000ff</color>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
